; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_ranges-avl.c_ravl_free.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_ranges-avl.c_ravl_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RavlNode = type { %struct.RavlNode*, %struct.RavlNode* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ravl_free(%struct.RavlNode* %0) #0 {
  %2 = alloca %struct.RavlNode*, align 8
  store %struct.RavlNode* %0, %struct.RavlNode** %2, align 8
  %3 = load %struct.RavlNode*, %struct.RavlNode** %2, align 8
  %4 = icmp ne %struct.RavlNode* %3, null
  br i1 %4, label %5, label %14

5:                                                ; preds = %1
  %6 = load %struct.RavlNode*, %struct.RavlNode** %2, align 8
  %7 = getelementptr inbounds %struct.RavlNode, %struct.RavlNode* %6, i32 0, i32 1
  %8 = load %struct.RavlNode*, %struct.RavlNode** %7, align 8
  call void @ravl_free(%struct.RavlNode* %8)
  %9 = load %struct.RavlNode*, %struct.RavlNode** %2, align 8
  %10 = getelementptr inbounds %struct.RavlNode, %struct.RavlNode* %9, i32 0, i32 0
  %11 = load %struct.RavlNode*, %struct.RavlNode** %10, align 8
  call void @ravl_free(%struct.RavlNode* %11)
  %12 = load %struct.RavlNode*, %struct.RavlNode** %2, align 8
  %13 = call i32 @free(%struct.RavlNode* %12)
  br label %14

14:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @free(%struct.RavlNode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
